@@ -1,3 +1,6 @@
+August 4th, 2008: Alex Burger <alex_b@users.sourceforge.net>
+- Added duplicate_trap_window variable for duplicate trap detection.
+
 March 2nd, 2008: Alex Burger <alex_b@users.sourceforge.net>
 - Fixed a bug where with handling escaped quotes in a traq message.
   Bug 1748512.  Thanks to Erwin Abrahamse for the fix.
